fix layout issue

--- a/style.css
+++ b/style.css
@@ -37,14 +37,13 @@ body
 #name_header
 {
     padding: 2%;
-    padding-left: 7%;
-    align-items: center;
+    text-align: center;
 }
 
 #cv_header
 {
     padding-bottom: 2%;
-    padding-left: 10%;
+    text-align: center;
 }
 
 #about
